--- a/index.html
+++ b/index.html
@@ -4,63 +4,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HCI & UX Source - Home</title>
+    <title>Home - HCI & UX Source</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Clean Slate & HTML5 Reset */
+        html, body, div, span, applet, object, iframe,
+        h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+        a, abbr, acronym, address, big, cite, code,
+        del, dfn, em, img, ins, kbd, q, s, samp,
+        small, strike, strong, sub, sup, tt, var,
+        b, u, i, center,
+        dl, dt, dd, ol, ul, li,
+        fieldset, form, label, legend,
+        table, caption, tbody, tfoot, thead, tr, th, td,
+        article, aside, canvas, details, embed,
+        figure, figcaption, footer, header, hgroup,
+        menu, nav, output, ruby, section, summary,
+        time, mark, audio, video {
             margin: 0;
             padding: 0;
+            border: 0;
+            font-size: 100%;
+            font: inherit;
+            vertical-align: baseline;
         }
-        .nav {
-            background-color: #f4f4f4;
-            padding: 10px;
-            text-align: center;
-        }
-        .nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-        }
-        .nav a.current {
-            font-weight: bold;
-            text-decoration: underline;
-        }
-        h1 {
-            text-align: center;
-        }
-        h2 {
-            margin-top: 20px;
-        }
-        p {
-            margin: 15px;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 50px auto;
+            width: 800px;
+            height: 700px;
+            background-color: #f9f9f9;
             line-height: 1.6;
         }
-        iframe {
-            display: block;
-            margin: 20px auto;
+        .here {
+            font-weight: bold;
+            text-decoration: underline;
+            color: #0044cc;
         }
-        img {
+        .first-letter {
+            font-size: 2em;
+            color: #333;
+        }
+        .pageContent {
+            display: flex;
+            gap: 15px;
+        }
+        .mainContent {
+            padding: 20px;
+            float: left;
+            width: 60%;
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .rightSidebar {
+            border: 2px solid #ddd;
+            padding: 15px;
+            background-color: #f5f5f5;
+            float: right;
+            width: 30%;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            clear: both;
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #d9d9d9;
+            border-top: 1px solid #ccc;
+        }
+        nav {
+            background-color: #e6e6e6;
+            padding: 10px;
+            text-align: center;
+            border-radius: 5px;
+        }
+        nav a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            margin: 0 5px;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            border-radius: 3px;
+        }
+        h1 {
+            color: #0044cc;
+            font-size: 2.2em;
+            margin-bottom: 15px;
+        }
+        h2 {
+            color: #333;
+            margin-bottom: 10px;
+        }
+        .rightSidebar h2 {
+            font-size: 1.5em;
+            color: #990000;
+            margin-bottom: 10px;
+        }
+        figure {
             float: left;
             margin-right: 15px;
             margin-bottom: 15px;
+            border: 1px solid #ccc;
+            padding: 5px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <div class="nav">
-        <a href="index.html" class="current">Home</a>
-        <a href="resources.html">Resources</a>
-        <a href="events.html">Events</a>
+    <header>
+        <h1>Welcome to HCI & UX Source</h1>
+    </header>
+    <nav>
+        <a href="index.html" class="here"><span class='here'>Home</span></a> |
+        <a href="resources"><span class='here'>Resources</span></a> |
+        <a href="events"><span class='here'>Events</span></a>
+    </nav>
+    <div class="pageContent">
+        <main class="mainContent">
+            <article>
+                <h2>Your Go-To Platform for HCI and UX Insights</h2>
+                <p><span class="first-letter" style="color: blue;">E</span>xplore the latest trends and resources in Human-Computer Interaction (HCI) and User Experience (UX) design. Our platform is designed for both industry professionals and academics.</p>
+                <figure>
+                    <img src="imagehomeleft.png" alt="HCI & UX Image" width="150">
+                    <figcaption>Example Image</figcaption>
+                </figure>
+                <p>Learn, collaborate, and share ideas to drive innovation in the field. Visit our <b>Resources</b> page for curated content, or check out upcoming events.</p>
+            </article>
+        </main>
+        <aside class="rightSidebar">
+            <h2>Latest Updates</h2>
+            <p>Check out latest industry events</p>
+            <figure>
+                <img src="imagehomeright.jpg" alt="Team Image" width="100">
+                <figcaption>Example Image</figcaption>
+            </figure>
+        </aside>
     </div>
-
-    <h1>Welcome to HCI & UX Source</h1>
-
-    <h2>Your go-to platform for HCI and UX insights</h2>
-    <p>Explore the <b>latest trends</b> and resources in Human-Computer Interaction (HCI) and User Experience (UX) design. Our platform is designed for both industry professionals and academics.</p>
-    <p>Learn, collaborate, and share ideas to drive innovation in the field. Visit our <a href="resources.html">Resources</a> page for curated content, or check out upcoming <a href="events.html">events</a>.</p>
-
-    <h2>A Powerful Image of a Detail</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ffBpMzqYeHk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <footer>
+        <p>&copy; 2025 HCI & UX Source</p>
+    </footer>
 </body>
 </html>
