--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+  <script>
+    $(document).ready(function() {
+      $('.carousel').carousel();
+    });
+  </script>
   <style>
     @media (max-width: 768px) {
       #sidebar {
@@ -39,6 +43,14 @@
       flex: 1;
       text-align: center;
     }
+
+    .fixed-feedback-btn {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
@@ -54,8 +66,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="#" aria-current="page">Home</a>
       </li>
-
-      <!-- InfoTech Dropdown -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">InfoTech</a>
         <div class="dropdown-menu" aria-labelledby="infotechDropdown">
@@ -64,8 +74,6 @@
           <a class="dropdown-item" href="#">Tools</a>
         </div>
       </li>
-
-      <!-- Interests Dropdown -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Interests</a>
         <div class="dropdown-menu" aria-labelledby="interestsDropdown">
@@ -74,13 +82,120 @@
           <a class="dropdown-item" href="#">Resources</a>
         </div>
       </li>
-
       <li class="nav-item"><a class="nav-link" href="#">About</a></li>
     </ul>
   </div>
 </nav>
 
-<!-- Content continues... -->
-<!-- Your remaining HTML content (carousel, sidebar, cards, etc.) should follow here -->
-</body>
-</html>
+<!-- Carousel Section -->
+<div class="container-fluid mt-4">
+  <div class="row">
+    <div class="col-12">
+      <div id="slideshow" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+          <li data-target="#slideshow" data-slide-to="1"></li>
+          <li data-target="#slideshow" data-slide-to="2"></li>
+          <li data-target="#slideshow" data-slide-to="3"></li>
+        </ul>
+        <div class="carousel-inner" style="max-height: 500px; overflow: hidden;">
+          <div class="carousel-item active">
+            <img src="https://via.placeholder.com/1200x500?text=New+York+Meetup" class="d-block w-100" alt="New York Meetup">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>New York Meetup</h5>
+              <p>HCI professionals gathering.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://via.placeholder.com/1200x500?text=SF+Meetup" class="d-block w-100" alt="SF Meetup">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>SF Meetup</h5>
+              <p>Industry discussions on HCI innovations.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://via.placeholder.com/1200x500?text=Austin+Meetup" class="d-block w-100" alt="Austin Meetup">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Austin Meetup</h5>
+              <p>Exploring UX research methods.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://via.placeholder.com/1200x500?text=Chicago+Meetup" class="d-block w-100" alt="Chicago Meetup">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Chicago Meetup</h5>
+              <p>Networking and academic insights.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Remaining Page Content -->
+<div class="container-fluid mt-4">
+  <div class="row">
+    <div class="col-xl-10 col-lg-9 col-md-8 col-sm-12">
+      <div class="row">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+          <h3>People in HCI to Follow</h3>
+          <ul class="nav nav-tabs">
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#ap1">AP 1</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#ap2">AP 2</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#ap3">AP 3</a></li>
+          </ul>
+
+          <div class="tab-content mt-2">
+            <div id="ap1" class="tab-pane fade show active">
+              <p>Notable HCI researcher 1 and a brief overview of their work.</p>
+            </div>
+            <div id="ap2" class="tab-pane fade">
+              <p>Notable HCI researcher 2 and a brief overview of their work.</p>
+              <table class="table table-bordered mt-2">
+                <thead>
+                  <tr><th>Name</th><th>Institution</th><th>Contribution</th></tr>
+                </thead>
+                <tbody>
+                  <tr><td>Researcher A</td><td>Institution A</td><td>Notable Contribution A</td></tr>
+                  <tr><td>Researcher B</td><td>Institution B</td><td>Notable Contribution B</td></tr>
+                  <tr><td>Researcher C</td><td>Institution C</td><td>Notable Contribution C</td></tr>
+                </tbody>
+              </table>
+            </div>
+            <div id="ap3" class="tab-pane fade">
+              <p>Notable HCI researcher 3 and a brief overview of their work.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+          <p>Famous academia researchers, their institutions, and their contribution to science.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-12" id="sidebar">
+      <h4>🔥 Hottest HCI Research Topics</h4>
+      <ul>
+        <li>AI in UX Design</li>
+        <li>Phygital HCI</li>
+        <li>Neuroscience & HCI</li>
+        <li>Accessibility Innovations</li>
+        <li>Ethics in AI & HCI</li>
+        <li>Voice Interfaces & Chatbots</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Fixed GazeParser Feedback Form Button -->
+<div class="fixed-feedback-btn">
+  <a href="feedback.html" class="btn btn-primary btn-lg">GazeParser Feedback Form</a>
+</div>
