--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Info Tech</a></li>
-            <li class="nav-item dropdown">
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Intro</a>
+        <a class="dropdown-item" href="#">Open Source</a>
+        <a class="dropdown-item" href="#">Tools</a>
+    </div>
+</li>            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Interests</a>
                <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Intro</a>
