--- a/intro.html
+++ b/intro.html
@@ -16,6 +16,21 @@
       font-weight: bold;
       text-decoration: underline;
     }
+      .sidebar {
+      float: right;
+      width: 25%;
+      padding: 15px;
+      background-color: #f8f9fa;
+      border-left: 2px solid #ddd;
+    }
+    .left-image {
+      float: left;
+      width: 25%;
+      margin-right: 20px;
+    }
+    .main-content {
+      overflow: hidden;
+    }
   </style>
 </head>
 <body>
@@ -53,6 +68,16 @@
 
 <!-- Page Content -->
 <div class="container mt-4">
+  <img src="hci-intro.jpg" alt="HCI Intro" class="left-image">
+  <div class="sidebar">
+    <h5>Quick Topics</h5>
+    <ul>
+      <li>Accessibility</li>
+      <li>Ethics</li>
+      <li>Phygital</li>
+    </ul>
+  </div>
+  <div class="main-content">
   <h1>Intro</h1>
   <p>This section introduces a variety of research and application areas that intersect with Human-Computer Interaction (HCI). Topics covered reflect personal and academic interests that include accessibility, emerging technologies, ethics in design, and user experience strategies. These themes represent how HCI adapts and responds to current social and technological changes.</p>
 
@@ -112,6 +137,8 @@
     <p>Blending digital systems with physical environments creates richer, more immersive user experiences.</p>
   </div>
 </div>
+  </div>
 </div>
 </body>
 </html>
+
