--- a/about/index.html
+++ b/about/index.html
@@ -62,9 +62,26 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-      <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-    </ul>
+  <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="infotech-intro.html">Intro</a>
+      <a class="dropdown-item" href="infotech-open-source.html">Open Source</a>
+      <a class="dropdown-item" href="infotech-tools.html">Tools</a>
+    </div>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="interests-intro.html">Intro</a>
+      <a class="dropdown-item" href="interests-resources.html">Resources</a>
+      <a class="dropdown-item" href="interests-video.html">Video</a>
+      <a class="dropdown-item" href="interests-screencast.html">Screencast</a>
+    </div>
+  </li>
+  <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+</ul>
   </div>
 </nav>
 
@@ -75,7 +92,7 @@
       <a class="nav-link active" data-toggle="tab" href="#intro">Intro</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#rollovers">Image Rollovers</a>
+      <a class="nav-link" data-toggle="tab" href="#rollovers">Images</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#screencast">Screencast</a>
