--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
         <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-    <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Intro</a>
-        <a class="dropdown-item" href="#">Open Source</a>
-        <a class="dropdown-item" href="#">Tools</a>
-    </div>
-</li>            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Interests</a>
-               <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Intro</a>
-        <a class="dropdown-item" href="#">Resources</a>
-        <a class="dropdown-item" href="#">Video</a>
-        <a class="dropdown-item" href="#">Screencast</a>
-    </div>
+  <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="infotech/intro.html">Intro</a>
+    <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+    <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+  </div>
+</li>         <li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="interest/intro.html">Intro</a>
+    <a class="dropdown-item" href="interest/resources.html">Resources</a>
+    <a class="dropdown-item" href="interest/video.html">Video</a>
+    <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
+  </div>
+</li>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         </ul>
     </div>
 </nav>
