--- a/about.html
+++ b/about.html
@@ -62,28 +62,42 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-  <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="infotech-intro.html">Intro</a>
-      <a class="dropdown-item" href="infotech-open-source.html">Open Source</a>
-      <a class="dropdown-item" href="infotech-tools.html">Tools</a>
-    </div>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="interests-intro.html">Intro</a>
-      <a class="dropdown-item" href="interests-resources.html">Resources</a>
-      <a class="dropdown-item" href="interests-video.html">Video</a>
-      <a class="dropdown-item" href="interests-screencast.html">Screencast</a>
-    </div>
-  </li>
-  <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-</ul>
+
+      <!-- Home -->
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+
+      <!-- InfoTech Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+        </div>
+      </li>
+
+      <!-- Interests Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="interest/intro.html">Intro</a>
+          <a class="dropdown-item" href="interest/resources.html">Resources</a>
+          <a class="dropdown-item" href="interest/video.html">Video</a>
+          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
+        </div>
+      </li>
+
+      <!-- About -->
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+
+    </ul>
   </div>
 </nav>
+
 
 <!-- Tabs -->
 <div class="container mt-4">
