--- a/index.html
+++ b/index.html
@@ -46,36 +46,48 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">HCI Resources</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-<li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="infotech/intro.html">Intro</a>
-    <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
-    <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+  <a class="navbar-brand" href="index.html">HCI Resources</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+
+      <!-- Home -->
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+
+      <!-- InfoTech Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+        </div>
+      </li>
+
+      <!-- Interests Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="interest/intro.html">Intro</a>
+          <a class="dropdown-item" href="interest/resources.html">Resources</a>
+          <a class="dropdown-item" href="interest/video.html">Video</a>
+          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
+        </div>
+      </li>
+
+      <!-- About -->
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+
+    </ul>
   </div>
-</li>      <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="interest/intro.html">Intro</a>
-    <a class="dropdown-item" href="interest/resources.html">Resources</a>
-    <a class="dropdown-item" href="interest/video.html">Video</a>
-    <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
-  </div>
-</li>
-            </li>
-<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        </ul>
-    </div>
 </nav>
 
-<div class="container-fluid">
     <!-- Row 1: Full-width Slideshow -->
     <div class="row">
         <div class="col-12">
