--- a/infotech/intro.html
+++ b/infotech/intro.html
@@ -43,37 +43,48 @@
 
 <!-- Navigation (consistent with main page) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">HCI Resources</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+  <a class="navbar-brand" href="index.html">HCI Resources</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
 
-            <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="infotech-intro.html">Intro (You are here)</a>
-                    <a class="dropdown-item" href="#">Open Source</a>
-                    <a class="dropdown-item" href="#">Tools</a>
-                </div>
-            </li>
+      <!-- Home -->
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Intro</a>
-                    <a class="dropdown-item" href="#">Resources</a>
-                    <a class="dropdown-item" href="#">Video</a>
-                    <a class="dropdown-item" href="#">Screencast</a>
-                </div>
-            </li>
+      <!-- InfoTech Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+        </div>
+      </li>
 
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        </ul>
-    </div>
+      <!-- Interests Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="interest/intro.html">Intro</a>
+          <a class="dropdown-item" href="interest/resources.html">Resources</a>
+          <a class="dropdown-item" href="interest/video.html">Video</a>
+          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
+        </div>
+      </li>
+
+      <!-- About -->
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+
+    </ul>
+  </div>
 </nav>
+
 
 <!-- Page Content -->
 <div class="container mt-4">
