--- a/interests/intro.html
+++ b/interests/intro.html
@@ -43,28 +43,42 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+      <!-- Home -->
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+
+      <!-- InfoTech Dropdown -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="infotech-intro.html">Intro</a>
-          <a class="dropdown-item" href="infotech-open-source.html">Open Source</a>
-          <a class="dropdown-item" href="infotech-tools.html">Tools</a>
+          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
         </div>
       </li>
-      <li class="nav-item dropdown active">
+
+      <!-- Interests Dropdown -->
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item active" href="interests-intro.html">Intro</a>
-          <a class="dropdown-item" href="#">Resources</a>
-          <a class="dropdown-item" href="#">Video</a>
-          <a class="dropdown-item" href="#">Screencast</a>
+          <a class="dropdown-item" href="interest/intro.html">Intro</a>
+          <a class="dropdown-item" href="interest/resources.html">Resources</a>
+          <a class="dropdown-item" href="interest/video.html">Video</a>
+          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
         </div>
       </li>
-      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+
+      <!-- About -->
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+
     </ul>
   </div>
 </nav>
+
 
 <!-- Page Content -->
 <div class="container mt-4">
