--- a/about.html
+++ b/about.html
@@ -134,16 +134,21 @@
 
     <!-- Image Rollovers Tab -->
     <div id="rollovers" class="container tab-pane fade">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="profile-before.jpg" class="rollover-img" onmouseover="this.src='profile-after.jpg'" onmouseout="this.src='profile-before.jpg'" alt="Profile Rollover 1">
-        </div>
-        <div class="col-md-6">
-          <img src="project-before.jpg" class="rollover-img" onmouseover="this.src='project-after.jpg'" onmouseout="this.src='project-before.jpg'" alt="Project Rollover 2">
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="profilepic1.jpeg" class="rollover-img"
+           onmouseover="this.src='profilepic2.jpeg'"
+           onmouseout="this.src='profilepic1.jpeg'"
+           alt="Profile Rollover 1">
     </div>
-
+    <div class="col-md-6">
+      <img src="profilepic1.jpeg" class="rollover-img"
+           onmouseover="this.src='profilepic2.jpeg'"
+           onmouseout="this.src='profilepic1.jpeg'"
+           alt="Profile Rollover 2">
+    </div>
+  </div>
+</div>
     <!-- Screencast Tab -->
     <div id="screencast" class="container tab-pane fade">
       <h3>My Favorite UX Research Tool</h3>
