--- a/index.html
+++ b/index.html
@@ -58,32 +58,22 @@
         <a class="nav-link" href="index.html">Home</a>
       </li>
 
-    <!-- InfoTech Dropdown -->
-<li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="infotech/intro.html">Intro</a>
-    <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
-    <a class="dropdown-item" href="infotech/tools.html">Tools</a>
-  </div>
-</li>
+   <!-- Inside a root-level page (e.g., index.html) -->
+<a class="nav-link" href="index.html">Home</a>
+
+<!-- InfoTech Dropdown -->
+<a class="dropdown-item" href="infotech/intro.html">Intro</a>
+<a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+<a class="dropdown-item" href="infotech/tools.html">Tools</a>
 
 <!-- Interests Dropdown -->
-<li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="interest/intro.html">Intro</a>
-    <a class="dropdown-item" href="interest/resources.html">Resources</a>
-    <a class="dropdown-item" href="interest/video.html">Video</a>
-    <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
-  </div>
-</li>
+<a class="dropdown-item" href="interest/intro.html">Intro</a>
+<a class="dropdown-item" href="interest/resources.html">Resources</a>
+<a class="dropdown-item" href="interest/video.html">Video</a>
+<a class="dropdown-item" href="interest/screencast.html">Screencast</a>
 
+<a class="nav-link" href="about.html">About</a>
 
-      <!-- About -->
-     <li class="nav-item">
-  <a class="nav-link" href="about.html">About</a>
-</li>
 
     </ul>
   </div>
