--- a/interests/video.html
+++ b/interests/video.html
@@ -65,31 +65,22 @@
         <a class="nav-link" href="index.html">Home</a>
       </li>
 
-      <!-- InfoTech Dropdown -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
-          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
-          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
-        </div>
-      </li>
+     <!-- Inside a subfolder page (e.g., infotech/tools.html) -->
+<a class="nav-link" href="../index.html">Home</a>
 
-      <!-- Interests Dropdown -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="interest/intro.html">Intro</a>
-          <a class="dropdown-item" href="interest/resources.html">Resources</a>
-          <a class="dropdown-item" href="interest/video.html">Video</a>
-          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
-        </div>
-      </li>
+<!-- InfoTech Dropdown -->
+<a class="dropdown-item" href="../infotech/intro.html">Intro</a>
+<a class="dropdown-item" href="../infotech/open-source.html">Open Source</a>
+<a class="dropdown-item" href="../infotech/tools.html">Tools</a>
 
-      <!-- About -->
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
+<!-- Interests Dropdown -->
+<a class="dropdown-item" href="../interest/intro.html">Intro</a>
+<a class="dropdown-item" href="../interest/resources.html">Resources</a>
+<a class="dropdown-item" href="../interest/video.html">Video</a>
+<a class="dropdown-item" href="../interest/screencast.html">Screencast</a>
+
+<a class="nav-link" href="../about.html">About</a>
+
 
     </ul>
   </div>
