--- a/infotech/opensource.html
+++ b/infotech/opensource.html
@@ -38,21 +38,21 @@
         <a class="nav-link" href="index.html">Home</a>
       </li>
 
-     <!-- Inside a subfolder page (e.g., infotech/tools.html) -->
-<a class="nav-link" href="../index.html">Home</a>
+  <!-- Inside a root-level page (e.g., index.html) -->
+<a class="nav-link" href="index.html">Home</a>
 
 <!-- InfoTech Dropdown -->
-<a class="dropdown-item" href="../infotech/intro.html">Intro</a>
-<a class="dropdown-item" href="../infotech/open-source.html">Open Source</a>
-<a class="dropdown-item" href="../infotech/tools.html">Tools</a>
+<a class="dropdown-item" href="infotech/intro.html">Intro</a>
+<a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
+<a class="dropdown-item" href="infotech/tools.html">Tools</a>
 
 <!-- Interests Dropdown -->
-<a class="dropdown-item" href="../interest/intro.html">Intro</a>
-<a class="dropdown-item" href="../interest/resources.html">Resources</a>
-<a class="dropdown-item" href="../interest/video.html">Video</a>
-<a class="dropdown-item" href="../interest/screencast.html">Screencast</a>
+<a class="dropdown-item" href="interest/intro.html">Intro</a>
+<a class="dropdown-item" href="interest/resources.html">Resources</a>
+<a class="dropdown-item" href="interest/video.html">Video</a>
+<a class="dropdown-item" href="interest/screencast.html">Screencast</a>
 
-<a class="nav-link" href="../about.html">About</a>
+<a class="nav-link" href="about.html">About</a>
 
 
     </ul>
