--- a/interests/intro.html
+++ b/interests/intro.html
@@ -63,10 +63,10 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="interest/intro.html">Intro</a>
-          <a class="dropdown-item" href="interest/resources.html">Resources</a>
-          <a class="dropdown-item" href="interest/video.html">Video</a>
-          <a class="dropdown-item" href="interest/screencast.html">Screencast</a>
+          <a class="dropdown-item" href="interests/intro.html">Intro</a>
+          <a class="dropdown-item" href="interests/resources.html">Resources</a>
+          <a class="dropdown-item" href="interests/video.html">Video</a>
+          <a class="dropdown-item" href="interests/screencast.html">Screencast</a>
         </div>
       </li>
 
@@ -74,10 +74,9 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">About</a>
       </li>
-    </ul>
-  </div>
+        </ul>
+    </div>
 </nav>
-
 
 <!-- Page Content -->
 <div class="container mt-4">
