--- a/interests/intro.html
+++ b/interests/intro.html
@@ -53,9 +53,9 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
-          <a class="dropdown-item" href="infotech/opensource.html">Open Source</a>
-          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+          <a class="dropdown-item" href="..infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="..infotech/opensource.html">Open Source</a>
+          <a class="dropdown-item" href="..infotech/tools.html">Tools</a>
         </div>
       </li>
 
