--- a/interests/intro.html
+++ b/interests/intro.html
@@ -53,9 +53,9 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="..infotech/intro.html">Intro</a>
-          <a class="dropdown-item" href="..infotech/opensource.html">Open Source</a>
-          <a class="dropdown-item" href="..infotech/tools.html">Tools</a>
+          <a class="dropdown-item" href="../infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="../infotech/opensource.html">Open Source</a>
+          <a class="dropdown-item" href="../infotech/tools.html">Tools</a>
         </div>
       </li>
 
@@ -63,10 +63,10 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="..interests/intro.html">Intro</a>
-          <a class="dropdown-item" href="..interests/resources.html">Resources</a>
-          <a class="dropdown-item" href="..interests/video.html">Video</a>
-          <a class="dropdown-item" href="..interests/screencast.html">Screencast</a>
+          <a class="dropdown-item" href="../interests/intro.html">Intro</a>
+          <a class="dropdown-item" href="../interests/resources.html">Resources</a>
+          <a class="dropdown-item" href="../interests/video.html">Video</a>
+          <a class="dropdown-item" href="../interests/screencast.html">Screencast</a>
         </div>
       </li>
 
