--- a/infotech/opensource.html
+++ b/infotech/opensource.html
@@ -26,46 +26,42 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">HCI Resources</a>
+  <a class="navbar-brand" href="../index.html">HCI Resources</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
 
-     <!-- Home -->
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
-      </li>
+      <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
 
-      <!-- InfoTech Dropdown -->
+      <!-- InfoTech Dropdown (for subpages) -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="infotech/intro.html">Intro</a>
-          <a class="dropdown-item" href="infotech/open-source.html">Open Source</a>
-          <a class="dropdown-item" href="infotech/tools.html">Tools</a>
+          <a class="dropdown-item" href="../infotech/intro.html">Intro</a>
+          <a class="dropdown-item" href="../infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="../infotech/tools.html">Tools</a>
         </div>
       </li>
 
-      <!-- Interests Dropdown -->
+      <!-- Interests Dropdown (for subpages) -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="interests/intro.html">Intro</a>
-          <a class="dropdown-item" href="interests/resources.html">Resources</a>
-          <a class="dropdown-item" href="interests/video.html">Video</a>
-          <a class="dropdown-item" href="interests/screencast.html">Screencast</a>
+          <a class="dropdown-item" href="../interests/intro.html">Intro</a>
+          <a class="dropdown-item" href="../interests/resources.html">Resources</a>
+          <a class="dropdown-item" href="../interests/video.html">Video</a>
+          <a class="dropdown-item" href="../interests/screencast.html">Screencast</a>
         </div>
       </li>
 
-      <!-- About -->
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-        </ul>
-    </div>
+      <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
+
+    </ul>
+  </div>
 </nav>
+
 
 
 <!-- Page Content -->
