--- a/infotech/opensource.html
+++ b/infotech/opensource.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<!-- Navigation -->
+<!-- Navigation for infotech/*.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="../index.html">HCI Resources</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -35,24 +35,24 @@
 
       <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
 
-      <!-- InfoTech Dropdown (go up one level to access infotech/) -->
+      <!-- InfoTech Dropdown -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="../infotech/intro.html">Intro</a>
-          <a class="dropdown-item" href="../infotech/open-source.html">Open Source</a>
+          <a class="dropdown-item" href="../infotech/opensource.html">Open Source</a>
           <a class="dropdown-item" href="../infotech/tools.html">Tools</a>
         </div>
       </li>
 
-      <!-- Interests Dropdown (no ../ — you're already inside the folder) -->
+      <!-- Interests Dropdown -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="intro.html">Intro</a>
-          <a class="dropdown-item" href="resources.html">Resources</a>
-          <a class="dropdown-item" href="video.html">Video</a>
-          <a class="dropdown-item" href="screencast.html">Screencast</a>
+          <a class="dropdown-item" href="../interests/intro.html">Intro</a>
+          <a class="dropdown-item" href="../interests/resources.html">Resources</a>
+          <a class="dropdown-item" href="../interests/video.html">Video</a>
+          <a class="dropdown-item" href="../interests/screencast.html">Screencast</a>
         </div>
       </li>
 
