--- a/interests/screencast.html
+++ b/interests/screencast.html
@@ -62,6 +62,7 @@
 
       <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
 
+      <!-- InfoTech Dropdown (go up one level to access infotech/) -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="infotechdrop" data-toggle="dropdown">InfoTech</a>
         <div class="dropdown-menu">
@@ -71,13 +72,14 @@
         </div>
       </li>
 
+      <!-- Interests Dropdown (no ../ — you're already inside the folder) -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="interestsdrop" data-toggle="dropdown">Interests</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="../interests/intro.html">Intro</a>
-          <a class="dropdown-item" href="../interests/resources.html">Resources</a>
-          <a class="dropdown-item" href="../interests/video.html">Video</a>
-          <a class="dropdown-item" href="../interests/screencast.html">Screencast</a>
+          <a class="dropdown-item" href="intro.html">Intro</a>
+          <a class="dropdown-item" href="resources.html">Resources</a>
+          <a class="dropdown-item" href="video.html">Video</a>
+          <a class="dropdown-item" href="screencast.html">Screencast</a>
         </div>
       </li>
 
