--- a/infotech/opensource.html
+++ b/infotech/opensource.html
@@ -84,9 +84,8 @@
     <p>By leveraging eye-tracking data, librarians and system designers can optimize user interfaces for clarity, accessibility, and efficiency.</p>
 
     <!-- Form Button -->
-    <div class="form-button text-center">
-        <a href="gazeparser-form.html" class="btn btn-primary btn-lg">GazeParser Feedback Form</a>
-    </div>
+<div class="container form-button">
+  <a href="infotech/form.html" class="btn btn-info btn-lg">Give Feedback on GazeParser</a>
 </div>
 
 </body>
