--- a/infotech/opensource.html
+++ b/infotech/opensource.html
@@ -85,7 +85,9 @@
 
     <!-- Form Button -->
 <div class="container form-button">
-  <a href="infotech/form.html" class="btn btn-info btn-lg">Give Feedback on GazeParser</a>
+  <a href="https://tatevique.github.io/InfoTechTermProject/infotech/form.html" class="btn btn-info btn-lg">
+    Give Feedback on GazeParser
+  </a>
 </div>
 
 </body>
