--- a/infotech/tools.html
+++ b/infotech/tools.html
@@ -119,95 +119,99 @@
 <form action="http://tatevique.42web.io/feedback_results.php" method="POST">
   <h3>Tool Feedback Survey</h3>
   <p>Please rate each tool based on your experience (1 = Poor, 5 = Excellent):</p>
+
   <div class="form-group">
     <label>HTML5:</label><br>
-    <input type="radio" name="html5" value="1" required> 1
+    <input type="radio" name="html5" value="1"> 1
     <input type="radio" name="html5" value="2"> 2
-    <input type="radio" name="html5" value="3"> 3
+    <input type="radio" name="html5" value="3" required> 3
     <input type="radio" name="html5" value="4"> 4
     <input type="radio" name="html5" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>CSS:</label><br>
-    <input type="radio" name="css" value="1" required> 1
+    <input type="radio" name="css" value="1"> 1
     <input type="radio" name="css" value="2"> 2
-    <input type="radio" name="css" value="3"> 3
+    <input type="radio" name="css" value="3" required> 3
     <input type="radio" name="css" value="4"> 4
     <input type="radio" name="css" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>JavaScript:</label><br>
-    <input type="radio" name="javascript" value="1" required> 1
+    <input type="radio" name="javascript" value="1"> 1
     <input type="radio" name="javascript" value="2"> 2
-    <input type="radio" name="javascript" value="3"> 3
+    <input type="radio" name="javascript" value="3" required> 3
     <input type="radio" name="javascript" value="4"> 4
     <input type="radio" name="javascript" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>Bootstrap:</label><br>
-    <input type="radio" name="bootstrap" value="1" required> 1
+    <input type="radio" name="bootstrap" value="1"> 1
     <input type="radio" name="bootstrap" value="2"> 2
-    <input type="radio" name="bootstrap" value="3"> 3
+    <input type="radio" name="bootstrap" value="3" required> 3
     <input type="radio" name="bootstrap" value="4"> 4
     <input type="radio" name="bootstrap" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>PHP:</label><br>
-    <input type="radio" name="php" value="1" required> 1
+    <input type="radio" name="php" value="1"> 1
     <input type="radio" name="php" value="2"> 2
-    <input type="radio" name="php" value="3"> 3
+    <input type="radio" name="php" value="3" required> 3
     <input type="radio" name="php" value="4"> 4
     <input type="radio" name="php" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>MySQL:</label><br>
-    <input type="radio" name="mysql" value="1" required> 1
+    <input type="radio" name="mysql" value="1"> 1
     <input type="radio" name="mysql" value="2"> 2
-    <input type="radio" name="mysql" value="3"> 3
+    <input type="radio" name="mysql" value="3" required> 3
     <input type="radio" name="mysql" value="4"> 4
     <input type="radio" name="mysql" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>XAMPP/MAMP:</label><br>
-    <input type="radio" name="xampp" value="1" required> 1
+    <input type="radio" name="xampp" value="1"> 1
     <input type="radio" name="xampp" value="2"> 2
-    <input type="radio" name="xampp" value="3"> 3
+    <input type="radio" name="xampp" value="3" required> 3
     <input type="radio" name="xampp" value="4"> 4
     <input type="radio" name="xampp" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>GazeParser:</label><br>
-    <input type="radio" name="gazeparser" value="1" required> 1
+    <input type="radio" name="gazeparser" value="1"> 1
     <input type="radio" name="gazeparser" value="2"> 2
-    <input type="radio" name="gazeparser" value="3"> 3
+    <input type="radio" name="gazeparser" value="3" required> 3
     <input type="radio" name="gazeparser" value="4"> 4
     <input type="radio" name="gazeparser" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>DOM Manipulation:</label><br>
-    <input type="radio" name="dom" value="1" required> 1
+    <input type="radio" name="dom" value="1"> 1
     <input type="radio" name="dom" value="2"> 2
-    <input type="radio" name="dom" value="3"> 3
+    <input type="radio" name="dom" value="3" required> 3
     <input type="radio" name="dom" value="4"> 4
     <input type="radio" name="dom" value="5"> 5
   </div>
 
   <div class="form-group">
     <label>Form Validation:</label><br>
-    <input type="radio" name="validation" value="1" required> 1
+    <input type="radio" name="validation" value="1"> 1
     <input type="radio" name="validation" value="2"> 2
-    <input type="radio" name="validation" value="3"> 3
+    <input type="radio" name="validation" value="3" required> 3
     <input type="radio" name="validation" value="4"> 4
     <input type="radio" name="validation" value="5"> 5
   </div>
+
+  <button type="submit" class="btn btn-primary">Submit Feedback</button>
+</form>
 
   <button type="submit" class="btn btn-primary">Submit Feedback</button>
 </form>
