--- a/infotech/tools.html
+++ b/infotech/tools.html
@@ -116,7 +116,7 @@
   <h2 id="validation">Form Validation</h2>
   <p>Validation prevents bad data. I used <code>required</code> fields and JavaScript checks. Tip: Combine HTML5 and JS for best results. <br>
   <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation" target="_blank">Form Validation Guide</a></p>
-<form action="http://tatevique.42web.io/feedback_results.php" method="POST">
+<form action="https://tatevique.42web.io/feedback_results.php" method="POST">
   <h3>Tool Feedback Survey</h3>
   <p>Please rate each tool based on your experience (1 = Poor, 5 = Excellent):</p>
 
